--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "animal-library",
   "version": "0.1.0",
+  "homepage": "https://newellso1.github.io/animal-library/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
